--- a/Projects/angular_images_from_db/src/app/all-images/images.component.css
+++ b/Projects/angular_images_from_db/src/app/all-images/images.component.css
@@ -1,20 +1,14 @@
-.img-table {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  min-height: 100vh;
-}
-
-table {
+table,
+.table table {
   text-align: center;
   margin-left: auto;
   margin-right: auto;
-  width: 40vw;
   border-collapse: collapse;
+  margin-bottom: 50px;
 }
 
-th {
+th,
+.table th {
   font-family: Arial;
   background-color: rgb(69, 69, 255);
   font-size: 20px;
@@ -23,6 +17,23 @@ th {
   padding: 5px;
 }
 
-td {
+td,
+.table td {
   border: 1px solid lightgray;
+}
+
+button {
+  border: none;
+  border-radius: 10px;
+  padding: 5px;
+  outline: none;
+  color: white;
+}
+
+.edit-btn {
+  background-color: green;
+}
+
+.delete-btn {
+  background-color: red;
 }
