--- a/Projects/angular_images_from_db/src/app/all-images/images.component.html
+++ b/Projects/angular_images_from_db/src/app/all-images/images.component.html
@@ -4,14 +4,115 @@
             <th>id</th>
             <th>name</th>
             <th>image</th>
+            <th>edit</th>
+            <th>delete</th>
         </thead>
-    
+
         <tbody>
             <tr *ngFor="let img of images">
                 <td>{{img.id}}</td>
                 <td>{{img.name}}</td>
                 <td><img src='{{img.image}}' width="100vw"></td>
+                <td><button class="edit-btn" (click)="updateImage(img.id)">Edit</button></td>
+                <td><button class="delete-btn" (click)="deleteImage(img.id)">Delete</button></td>
             </tr>
         </tbody>
     </table>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="table" id="table">
+
+    <div>
+
+        <div class="h3 text-center mt-3" id="heading">
+            Images Data
+        </div>
+
+        <div class="text-center container mt-3">
+            <input id="search" matInput [(ngModel)]="search" (keyup)="applyFilter()" placeholder="Filter">
+
+        </div>
+        <div class="table table-responsive mat-elevation-z8 mt-3" id="Images-table">
+
+            <table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)">
+
+                <!-- ID Column -->
+                <ng-container matColumnDef="id">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by id">
+                        ID
+                    </th>
+                    <td mat-cell *matCellDef="let image"> {{image.id}} </td>
+                </ng-container>
+
+                <!-- name Column -->
+                <ng-container matColumnDef="name">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by name">
+                        name
+                    </th>
+                    <td mat-cell *matCellDef="let image"> {{image.name}} </td>
+                </ng-container>
+
+                <!-- image Column -->
+                <ng-container matColumnDef="image">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by image">
+                        image
+                    </th>
+                    <td mat-cell *matCellDef="let image"> <img src='{{image.image}}' width="100vw"> </td>
+                </ng-container>
+
+                <!-- edit Column -->
+                <ng-container matColumnDef="edit">
+                    <th mat-header-cell *matHeaderCellDef>
+                        Edit
+                    </th>
+                    <td mat-cell *matCellDef="let image"> <button (click)="updateImage(image.id)"
+                            class="edit-btn">Edit</button> </td>
+                </ng-container>
+
+                <!-- delete Column -->
+                <ng-container matColumnDef="delete">
+                    <th mat-header-cell *matHeaderCellDef>
+                        Delete
+                    </th>
+                    <td mat-cell *matCellDef="let image"> <button (click)="deleteImage(image.id)"
+                            class="delete-btn">Delete</button> </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+            </table>
+
+        </div>
+
+        <div>
+            <mat-paginator class="paginator" [pageSizeOptions]="[5, 10, 20, 50, 100]" showFirstLastButtons>
+            </mat-paginator>
+        </div>
+
+    </div>
+
 </div>
