--- a/Projects/angular_images_from_db/src/app/confirmation-dialog/confirmation-dialog.component.html
+++ b/Projects/angular_images_from_db/src/app/confirmation-dialog/confirmation-dialog.component.html
@@ -1,4 +1,7 @@
 <div class="conf-dialog">
+  <div class="modal-header">
+    <b>{{ title }}</b>
+  </div>
   <div class="modal-body">
     {{ message }} <p class="text-primary"><b>{{Action}}</b></p>
   </div>
