--- a/Projects/angular_images_from_db/src/app/all-images/images.component.css
+++ b/Projects/angular_images_from_db/src/app/all-images/images.component.css
@@ -1,25 +1,7 @@
-table,
-.table table {
-  text-align: center;
+input {
+  width: 30vw;
   margin-left: auto;
   margin-right: auto;
-  border-collapse: collapse;
-  margin-bottom: 50px;
-}
-
-th,
-.table th {
-  font-family: Arial;
-  background-color: rgb(69, 69, 255);
-  font-size: 20px;
-  color: white;
-  border: 1px solid rgb(134, 134, 255);
-  padding: 5px;
-}
-
-td,
-.table td {
-  border: 1px solid lightgray;
 }
 
 button {
@@ -36,4 +18,98 @@ button {
 
 .delete-btn {
   background-color: red;
+}
+
+#Images-table {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 20px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+}
+
+.paginator {
+  transform: translate(0px, -16px);
+  background-color: white;
+  border-radius: 20px;
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
+  box-shadow: 0px 10px 10px rgb(207, 207, 207);
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+  padding-bottom: 10px;
+}
+
+table {
+  border-radius: 20px;
+}
+
+.table {
+  border-bottom: 0px solid transparent;
+}
+
+.table table th {
+  text-shadow: 0px 0px 5px rgb(255, 0, 0);
+  background-color: rgb(255, 88, 88);
+  color: white;
+  text-align: center;
+}
+
+tbody {
+  text-align: center;
+}
+
+td {
+  text-align: center;
+}
+
+.table .mat-sort-header-container {
+  justify-content: center;
+}
+
+thead th:first-child {
+  border-top-left-radius: 20px;
+}
+thead th:last-child {
+  border-top-right-radius: 20px;
+}
+
+tbody tr:nth-child(even) td {
+  background-color: rgb(255, 231, 231);
+}
+
+tbody tr:last-child td:first-child {
+  border-bottom: none;
+}
+
+tbody tr:last-child td:last-child {
+  border-bottom: none;
+}
+
+tbody tr:last-child {
+  border-bottom: 1px solid rgb(255, 199, 199);
+}
+
+thead tr th:hover {
+  background-color: rgb(163, 26, 26);
+  color: white;
+  cursor: pointer;
+  transform: scale(1.1);
+  border-radius: 5px;
+  transition: 300ms;
+}
+
+.table > :not(caption) > * > * {
+  border-bottom: none;
+}
+
+.mat-sort-header-stem,
+.mat-sort-header-indicator {
+  color: white;
+}
+
+.pagecontainer {
+  color: rgb(0, 0, 190);
 }
