--- a/Projects/angular_ecommerce/src/app/components/login/login.component.html
+++ b/Projects/angular_ecommerce/src/app/components/login/login.component.html
@@ -65,7 +65,7 @@
                 <p class=" h6">Signup and discover a great experience on ManishHub</p>
 
                 <div class="text-center mt-3">
-                    <button type="submit" class="btn" routerLink="/register">Signup</button>
+                    <button type="submit" class="btn" routerLink="/signup">Signup</button>
                 </div>
             </div>
         </div>
