--- a/Projects/angular_ecommerce/src/app/components/products/products.component.html
+++ b/Projects/angular_ecommerce/src/app/components/products/products.component.html
@@ -1,83 +1,79 @@
 <div class="products">
-    <div class="add-image text-center">
-        <form [formGroup]="addImageForm" (ngSubmit)="uploadImage()">
-            <input class="form-control mt-5" formControlName="image" type="file" (change)="selectFile1($event)">
-            <button class="btn btn-primary mt-3" type="submit" [disabled]="addImageForm.invalid">Add</button>
-        </form>
-    </div>
 
-    <div class="table" id="table">
+    <div>
 
-        <div>
+        <div class="h3 text-center mt-3" id="heading">
+           Products
+        </div>
 
-            <div class="h3 text-center mt-3" id="heading">
-                Products
-            </div>
+        <div class="text-center container mt-3">
+            <input id="search" matInput [(ngModel)]="search" (keyup)="applyFilter()" placeholder="Filter">
+            <button (click)="addProduct()" class="btn btn-outline-danger btn-sm" style="margin-left: 10px;"
+                placement="right" ngbTooltip="Add product">
+                <i class="bi bi-database-fill-add"></i>
+            </button>
+        </div>
+        <div class="table table-responsive mat-elevation-z8 mt-3" id="products-table">
 
-            <div class="text-center container mt-3">
-                <input id="search" class="form-control" matInput [(ngModel)]="search" (keyup)="applyFilter()"
-                    placeholder="Filter">
-            </div>
-            <div class="table table-responsive mat-elevation-z8 mt-3" id="products-table">
+            <table mat-table [dataSource]="dataSource" matSort>
 
-                <table mat-table [dataSource]="dataSource" matSort>
+                <!-- ID Column -->
+                <ng-container matColumnDef="id">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by id">
+                        ID
+                    </th>
+                    <td mat-cell *matCellDef="let image"> {{image.id}} </td>
+                </ng-container>
 
-                    <!-- ID Column -->
-                    <ng-container matColumnDef="id">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by id">
-                            ID
-                        </th>
-                        <td mat-cell *matCellDef="let image"> {{image.id}} </td>
-                    </ng-container>
+                <!-- name Column -->
+                <ng-container matColumnDef="name">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by name">
+                        name
+                    </th>
+                    <td mat-cell *matCellDef="let image"> {{image.name}} </td>
+                </ng-container>
 
-                    <!-- name Column -->
-                    <ng-container matColumnDef="name">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by name">
-                            name
-                        </th>
-                        <td mat-cell *matCellDef="let image"> {{image.name}} </td>
-                    </ng-container>
+                <!-- image Column -->
+                <ng-container matColumnDef="image">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by image">
+                        image
+                    </th>
+                    <td mat-cell *matCellDef="let image"> <img src='{{image.image}}' width="100vw"> </td>
+                </ng-container>
 
-                    <!-- image Column -->
-                    <ng-container matColumnDef="image">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by image">
-                            image
-                        </th>
-                        <td mat-cell *matCellDef="let image"> <img src='{{image.image}}' width="100vw"> </td>
-                    </ng-container>
+                <!-- edit Column -->
+                <ng-container matColumnDef="edit">
+                    <th mat-header-cell *matHeaderCellDef>
+                        Edit
+                    </th>
+                    <td mat-cell *matCellDef="let image"> <button (click)="updateImage(image.id)"
+                            class="edit-btn">Edit</button> </td>
+                </ng-container>
 
-                    <!-- edit Column -->
-                    <ng-container matColumnDef="edit">
-                        <th mat-header-cell *matHeaderCellDef>
-                            Edit
-                        </th>
-                        <td mat-cell *matCellDef="let image"> <button (click)="updateImage(image.id)"
-                                class="edit-btn">Edit</button> </td>
-                    </ng-container>
+                <!-- delete Column -->
+                <ng-container matColumnDef="delete">
+                    <th mat-header-cell *matHeaderCellDef>
+                        Delete
+                    </th>
+                    <td mat-cell *matCellDef="let image"> <button (click)="deleteImage(image.id)"
+                            class="delete-btn">Delete</button> </td>
+                </ng-container>
 
-                    <!-- delete Column -->
-                    <ng-container matColumnDef="delete">
-                        <th mat-header-cell *matHeaderCellDef>
-                            Delete
-                        </th>
-                        <td mat-cell *matCellDef="let image"> <button (click)="deleteImage(image.id)"
-                                class="delete-btn">Delete</button> </td>
-                    </ng-container>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
 
-                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
-                </table>
-
-            </div>
-
-            <div>
-                <mat-paginator class="paginator" [pageSizeOptions]="[5, 10, 20, 50, 100]" showFirstLastButtons>
-                </mat-paginator>
-            </div>
+            </table>
 
         </div>
 
+        <div>
+            <mat-paginator class="paginator" [pageSizeOptions]="[5, 10, 20, 50, 100]" showFirstLastButtons>
+            </mat-paginator>
+        </div>
+
     </div>
+
+
+    <app-footer></app-footer>
 </div>
