--- a/Projects/angular_ecommerce/src/app/components/users/users.component.css
+++ b/Projects/angular_ecommerce/src/app/components/users/users.component.css
@@ -1,21 +1,10 @@
 .users {
-  height: auto;
+  height: 100vh;
 }
 
 .users #heading {
   font-family: "Poppins", sans-serif;
   color: rgb(255, 58, 58);
-}
-
-.users footer {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  text-align: center;
-  bottom: 0px;
-  background-color: white;
-  box-shadow: 0px -1px 5px lightgray;
-  width: 100%;
 }
 
 .users #Users-table {
@@ -25,7 +14,6 @@
   border-radius: 20px;
   border-bottom-left-radius: 0px;
   border-bottom-right-radius: 0px;
-  /* box-shadow: 0px 0px 20px gray */
 }
 
 .users .paginator {
