--- a/Projects/angular_ecommerce/src/app/components/products/products.component.css
+++ b/Projects/angular_ecommerce/src/app/components/products/products.component.css
@@ -32,34 +32,28 @@
 
 .products .edit-btn {
   border: none;
-  background-color: green;
-  color: white;
-  padding: 5px 10px;
-  border-radius: 10px;
-  font-size: 12px;
+  color: green;
+  background-color: white;
 }
 
 .products .edit-btn:hover {
-  box-shadow: 0px 0px 5px rgb(0, 75, 0);
+  text-shadow: 0px 0px 10px green;
   transition: 300ms;
 }
 
 .products .delete-btn {
   border: none;
-  background-color: red;
-  color: white;
-  padding: 5px;
-  border-radius: 10px;
-  font-size: 12px;
+  color: red;
+  background-color: white;
 }
 
 .products .delete-btn:hover {
-  box-shadow: 0px 0px 5px rgb(151, 0, 0);
+  text-shadow: 0px 0px 10px red;
   transition: 300ms;
 }
 
 .products #products-table {
-  width: 90%;
+  width: 60%;
   margin-left: auto;
   margin-right: auto;
   border-radius: 20px;
@@ -77,7 +71,7 @@
   box-shadow: 0px 10px 10px rgb(207, 207, 207);
   margin-left: auto;
   margin-right: auto;
-  width: 90%;
+  width: 60%;
   padding-bottom: 10px;
 }
 
@@ -96,16 +90,8 @@
   text-align: center;
 }
 
-.products tbody {
-  text-align: center;
-}
-
 .products td {
   text-align: center;
-}
-
-.products .mat-sort-header-container {
-  justify-content: center;
 }
 
 .products thead th:first-child {
@@ -125,10 +111,6 @@
 
 .products tbody tr:last-child td:last-child {
   border-bottom: none;
-}
-
-.products tbody tr:last-child {
-  border-bottom: 1px solid rgb(255, 199, 199);
 }
 
 .products thead tr th:hover {
