--- a/Projects/angular_ecommerce/src/app/components/products/products.component.html
+++ b/Projects/angular_ecommerce/src/app/components/products/products.component.html
@@ -3,7 +3,7 @@
     <div>
 
         <div class="h3 text-center mt-3" id="heading">
-           Products
+            Products
         </div>
 
         <div class="text-center container mt-3">
@@ -41,13 +41,29 @@
                     <td mat-cell *matCellDef="let image"> <img src='{{image.image}}' width="100vw"> </td>
                 </ng-container>
 
+                <!-- info Column -->
+                <ng-container matColumnDef="info">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by info">
+                        info
+                    </th>
+                    <td mat-cell *matCellDef="let image">{{image.info}} </td>
+                </ng-container>
+
+                <!-- active Column -->
+                <ng-container matColumnDef="active">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by active">
+                        active
+                    </th>
+                    <td mat-cell *matCellDef="let image">{{image.active}} </td>
+                </ng-container>
+
                 <!-- edit Column -->
                 <ng-container matColumnDef="edit">
                     <th mat-header-cell *matHeaderCellDef>
                         Edit
                     </th>
                     <td mat-cell *matCellDef="let image"> <button (click)="updateImage(image.id)"
-                            class="edit-btn">Edit</button> </td>
+                            class="edit-btn"><mat-icon>edit</mat-icon></button> </td>
                 </ng-container>
 
                 <!-- delete Column -->
@@ -56,7 +72,7 @@
                         Delete
                     </th>
                     <td mat-cell *matCellDef="let image"> <button (click)="deleteImage(image.id)"
-                            class="delete-btn">Delete</button> </td>
+                            class="delete-btn"><mat-icon>delete</mat-icon></button> </td>
                 </ng-container>
 
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -65,7 +81,7 @@
 
             </table>
 
-        </div>
+        </div> 
 
         <div>
             <mat-paginator class="paginator" [pageSizeOptions]="[5, 10, 20, 50, 100]" showFirstLastButtons>
