--- a/Projects/angular_ecommerce/src/app/components/store/store.component.css
+++ b/Projects/angular_ecommerce/src/app/components/store/store.component.css
@@ -1,6 +1,18 @@
-.store .section1 {
-  background-image: url("../../../assets/images/store1.jpg");
-  width: 100vw;
-  height: 100vh;
-  background-size: cover;
+.store
+  .ng-image-slider
+  .ng-image-slider-container
+  .main
+  .main-inner
+  .img-div.image-popup {
+  border-radius: 20px !important;
+}
+
+.store ng-image-slider img {
+  border-radius: 20px !important;
+}
+
+.store mat-list {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
 }
