--- a/Projects/angular_ecommerce/src/app/components/store/store.component.html
+++ b/Projects/angular_ecommerce/src/app/components/store/store.component.html
@@ -1,7 +1,26 @@
 <div class="store">
-    <div class="section1">
-        <div class="h1">
-            
+    <div class="container">
+        <div class="section1 mt-5">
+            <ng-image-slider [images]="imageObject" [infinite]="true" [autoSlide]="0"
+                [imageSize]="{width: '35%', height: 250}" slideImage="1"></ng-image-slider>
         </div>
     </div>
 </div>
+
+<mat-list>
+    <div mat-subheader>Products</div>
+
+    <mat-list-item *ngFor="let product of products" class="mb-4">
+
+        <div class="row">
+            <div class="col-3">
+                <img src='{{product.image}}' class="img-fluid mx-auto d-block" [height]="200" style="vertical-align: middle;">
+            </div>
+            <div class="col-6">
+                <div matListItemTitle>{{product.name}}</div>
+                <div matListItemLine>{{product.info}}</div>
+            </div>
+        </div>
+
+    </mat-list-item>
+</mat-list>
