--- a/Projects/angular_ecommerce/src/styles.css
+++ b/Projects/angular_ecommerce/src/styles.css
@@ -60,6 +60,14 @@ body {
   color: white;
 }
 
+.products tbody tr {
+  border-bottom: 1px solid rgb(255, 199, 199) !important;
+}
+
+.users tbody tr {
+  border-bottom: 1px solid rgb(255, 199, 199);
+}
+
 .products thead tr th:hover {
   background-color: rgb(163, 26, 26) !important;
   color: white;
@@ -67,4 +75,35 @@ body {
   transform: scale(1.1);
   border-radius: 5px;
   transition: 300ms;
+}
+
+.store
+  .ng-image-slider
+  .ng-image-slider-container
+  .main
+  .main-inner
+  .img-div.image-popup {
+  border-radius: 20px !important;
+  margin-right: 20px !important;
+}
+
+.store ng-image-slider img {
+  border-radius: 20px !important;
+}
+
+.store .ng-image-slider .ng-image-slider-container .main > .prev,
+.next {
+  filter: drop-shadow(0px 0px 5px gray);
+}
+
+mat-list-item {
+  margin-left: auto !important;
+  margin-right: auto !important;
+  width: 80% !important;
+}
+
+.mdc-list-item.mdc-list-item--with-three-lines {
+  height: 200px !important;
+  box-shadow: 0px 0px 5px pink;
+  border-radius: 20px;
 }
