fetching products, current product

--- a/Projects/angular_ecommerce/src/app/components/products-add/products-add.component.html
+++ b/Projects/angular_ecommerce/src/app/components/products-add/products-add.component.html
@@ -1,7 +1,7 @@
 <div class="edit-overlay">
 
     <div class="modal-header">
-        <div class="modal-title text-center h3 text-primary">Add Product</div>
+        <div class="modal-title text-center h3">Add Product</div>
     </div>
     <div class="modal-body">
         <form [formGroup]="addImageForm" id="add-product-form" class="form-inline">
