--- a/Projects/angular_ecommerce/src/app/components/users-add/users-add.component.html
+++ b/Projects/angular_ecommerce/src/app/components/users-add/users-add.component.html
@@ -1,7 +1,7 @@
 <div class="edit-overlay">
 
     <div class="modal-header">
-        <div class="modal-title text-center h3 text-primary">Add user</div>
+        <div class="modal-title text-center h3">Add user</div>
     </div>
     <div class="modal-body">
         <form [formGroup]="EditForm" id="registration-form" class="form-inline" #editForm="ngForm">
