--- a/Projects/angular_ecommerce/src/app/components/admin-dashboard/admin-dashboard.component.css
+++ b/Projects/angular_ecommerce/src/app/components/admin-dashboard/admin-dashboard.component.css
@@ -5,7 +5,7 @@
   padding-right: 20px;
   background-color: white;
   color: black;
-  box-shadow: 0px 0px 10px rgb(170, 60, 170);
+  box-shadow: 0px 0px 10px gray;
 }
 
 .admin-dashboard .sidenav-btn {
