--- a/Projects/angular_ecommerce/src/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/Projects/angular_ecommerce/src/app/components/admin-dashboard/admin-dashboard.component.html
@@ -6,7 +6,7 @@
             </button>
 
         </div>
-        <mat-drawer mode="side" opened #drawer>
+        <mat-drawer mode="over" #drawer>
             <button type="button" id="btn" class="btn btn2" mat-button (click)="drawer.toggle();toggleBtn1()">
                 <i class="bi bi-arrow-left"></i>
             </button>
