--- a/Projects/angular_ecommerce/src/app/components/single-product/single-product.component.html
+++ b/Projects/angular_ecommerce/src/app/components/single-product/single-product.component.html
@@ -4,30 +4,38 @@
         <!-- section 1 -->
         <div class="section-1 mt-5">
             <div class="row">
-                <div class="col-3 img-col">
-                    <img src='{{product[0].image}}' class="img-fluid mx-auto d-block" [height]="200"
-                        style="vertical-align: middle;">
+
+                <!-- image col -->
+                <div class="col img-col d-flex align-items-center">
+                    <img src='{{product[0].image}}' class="img-fluid mx-auto d-block">
                 </div>
-                <div class="col-5 desc-col">
+
+                <!-- desc col -->
+                <div class="col desc-col">
                     <div matListItemTitle>
                         <h1><b>{{product[0].name}}</b></h1>
                     </div>
                     <div matListItemLine>{{product[0].info}}</div>
+                    <div class="main-details">
 
-                    <div matListItemTitle class="mt-3">
-                        <h1>50/-</h1>
+
+                        <div matListItemTitle class="mt-3">
+                            <h1>50/-</h1>
+                        </div>
+
+                        <button class="btn btn-primary mt-3 d-flex">Add
+                            &nbsp;<mat-icon>shopping_cart</mat-icon></button>
                     </div>
-
-                    <button class="btn btn-primary mt-3 d-flex">Add &nbsp;<mat-icon>shopping_cart</mat-icon></button>
 
                     <hr>
 
                     <h3><u>Description</u></h3>
-                    <p>A banana is an elongated, edible fruit – botanically a berry – produced by several kinds of
+                    <p>A banana is an elongated, edible fruit botanically a berry produced by several kinds of
                         large herbaceous flowering plants in the genus Musa. In some countries, bananas used for
                         cooking may be called "plantains", distinguishing them from dessert bananas.</p>
                 </div>
 
+                <!-- offers col -->
                 <div class="col">
 
                     <h2>Available Offers:</h2>
@@ -70,16 +78,17 @@
 
         <div class="h5 ms-4">Similar products</div>
 
-        <mat-list class=" d-flex">
+        <mat-list class="d-flex">
             <mat-list-item *ngFor="let product of products">
 
-                <div class="card" style="width: 12rem;">
+                <div class="card">
                     <img src='{{product.image}}' class="img-fluid mx-auto d-block" [height]="100" [width]="100">
                     <div class="card-body">
                         <b>{{product.name}}</b>
-                        <div>
+                        <div class="d-flex price-buy">
                             <b>50/-</b>
-                            <button class="btn btn-outline-success btn-sm mt-5">Buy</button>
+                            <button class="btn btn-outline-success btn-sm"
+                                (click)="goToProduct(product.id)">Buy</button>
                         </div>
                     </div>
                 </div>
