--- a/Projects/angular_ecommerce/src/app/components/store/store.component.html
+++ b/Projects/angular_ecommerce/src/app/components/store/store.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="section1 mt-5">
             <ng-image-slider [images]="imageObject" [infinite]="true" [autoSlide]="0"
-                [imageSize]="{width: '35%', height: 250}" slideImage="1"></ng-image-slider>
+                [imageSize]="{width: 400, height: 250}" slideImage="1"></ng-image-slider>
         </div>
     </div>
 </div>
@@ -11,7 +11,18 @@
 
     <mat-list-item *ngFor="let product of products" class="mb-4">
 
-        <div class="row" (click)="goToProduct(product.id)">
+        <div class="card products-list-mobile">
+            <img src='{{product.image}}' class="img-fluid mx-auto d-block" [height]="100" [width]="100">
+            <div class="card-body">
+                <b>{{product.name}}</b>
+                <div class="d-flex price-buy">
+                    <b>50/-</b>
+                    <button class="btn btn-outline-success btn-sm" (click)="goToProduct(product.id)">Buy</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="row products-list" (click)="goToProduct(product.id)">
 
             <div class="col-3">
                 <img src='{{product.image}}' class="img-fluid mx-auto d-block" [height]="160" [width]="160">
@@ -32,7 +43,6 @@
 
             <div class="col">
                 <h1><b>50/-</b></h1>
-
                 <button class="btn btn-success mt-5">Buy</button>
             </div>
 
