optimized add to cart, inc-dec

--- a/Projects/angular_ecommerce/src/app/components/store/store.component.html
+++ b/Projects/angular_ecommerce/src/app/components/store/store.component.html
@@ -16,7 +16,8 @@
                     <div class="card products-list-mobile">
                         <img src='{{product.image}}' class="img-fluid mx-auto d-block" [height]="100" [width]="100">
                         <div class="card-body">
-                            <b>{{product.name}}</b>
+                            <b>{{product.name}}</b><br>
+                            <i>{{product.info}}</i>
                             <div class="d-flex price-buy">
                                 <b>50/-</b>
                                 <button class="btn btn-outline-success btn-sm"
