--- a/Projects/angular_ecommerce/src/app/components/cart/cart.component.html
+++ b/Projects/angular_ecommerce/src/app/components/cart/cart.component.html
@@ -1,39 +1,73 @@
 <div class="cart">
 
-    <mat-list class="mt-5 d-flex flex-column">
+    <div class="container">
+        <mat-list class="mt-5 d-flex flex-column">
 
-        <mat-list-item *ngFor="let product of products" class="mb-4">
+            <mat-list-item *ngFor="let product of myCartItems" class="mb-4">
 
-            <div class="row products-list" (click)="goToProduct(product.id)">
+                <div class="card products-list-mobile">
+                    <img src='{{product.image}}' class="img-fluid mx-auto d-block" [height]="100" [width]="100">
+                    <div class="card-body">
+                        <b>{{product.name}}</b><br>
+                        <i>{{product.info}}</i>
 
-                <div class="col-3">
-                    <img src='{{product.image}}' class="img-fluid mx-auto d-block" [height]="160" [width]="160">
-                </div>
+                        <div class="d-flex cart-price-buy mt-2">
 
-                <div class="col-6">
-                    <div matListItemTitle>
-                        <h1>{{product.name}}</h1>
-                        <h2>About product</h2>
-                        <ul>
-                            <li>It is yellow in colour and very sweet.</li>
-                            <li>It is rich in various vitamins, minerals, and other ingredients.</li>
-                            <li>Bananas give you instant energy.</li>
-                        </ul>
+                            <div class="d-flex align-items-center inc-dec-div">
+                                <button class="btn btn-sm text-primary d-flex inc-dec-btn" (click)="increase_quantity(product.id)">
+                                    &nbsp;<mat-icon>add_circle</mat-icon></button>
+                                <b class="text-primary h5 mt-2">{{product.quantity}}</b>
+                                <button class="btn btn-sm text-primary d-flex inc-dec-btn" (click)="decrease_quantity(product.id)">
+                                    &nbsp;<mat-icon>remove_circle</mat-icon></button>
+                            </div>
+
+                            <h2 class="me-1"><b>50/-</b></h2>
+                            <button class="btn btn-success btn-sm">Buy</button>
+                            <button class="btn btn-danger btn-sm" (click)="removeFromCart(product.id)"><i
+                                    class="bi bi-trash-fill"></i></button>
+                        </div>
                     </div>
-                    <div matListItemLine>{{product.info}}</div>
                 </div>
 
-                <div class="col">
-                    <h1><b>50/-</b></h1>
-                    <button class="btn btn-success mt-5">Buy</button>
+                <div class="row products-list">
+
+                    <div class="col">
+                        <img src='{{product.image}}' (click)="goToProduct(product.id)" class="img-fluid mx-auto d-block"
+                            [height]="160" [width]="160">
+                    </div>
+
+                    <div class="col">
+                        <div matListItemTitle>
+                            <h1>{{product.name}}</h1>
+                        </div>
+                        <div matListItemLine>{{product.info}}</div>
+
+                        <div class="d-flex align-items-center">
+                            <button class="btn text-primary mt-3 d-flex" (click)="increase_quantity(product.id)">
+                                &nbsp;<mat-icon>add_circle</mat-icon></button>
+                            <b class="text-primary h5 mt-4">{{product.quantity}}</b>
+                            <button class="btn text-primary mt-3 d-flex" (click)="decrease_quantity(product.id)">
+                                &nbsp;<mat-icon>remove_circle</mat-icon></button>
+                        </div>
+
+                    </div>
+
+                    <div class="col">
+                        <h1><b>50/-</b></h1>
+                        <button class="btn btn-success btn-sm mt-5">Buy</button>
+                        <button class="btn btn-danger btn-sm mt-5 ms-2" (click)="removeFromCart(product.id)"><i
+                                class="bi bi-trash-fill"></i></button>
+                    </div>
+
                 </div>
 
-            </div>
+            </mat-list-item>
+        </mat-list>
 
-        </mat-list-item>
-    </mat-list>
+        <div class="text-end">
+            <button class="btn btn-success">Place order</button>
+        </div>
+    </div>
 
-
-
-    <app-footer></app-footer>
 </div>
+<app-footer></app-footer>
