--- a/Projects/angular_ecommerce/src/app/components/store/store.component.html
+++ b/Projects/angular_ecommerce/src/app/components/store/store.component.html
@@ -3,8 +3,8 @@
 
         <!-- section 1 -->
         <div class="section1 mt-5">
-            <ng-image-slider [images]="imageObject" [infinite]="true" [autoSlide]="0"
-                [imageSize]="{width: 400, height: 250}" slideImage="1"></ng-image-slider>
+            <ng-image-slider [images]="imageObject" [infinite]="true" [autoSlide]="1"
+                [imageSize]="{width: 400, height: 250}" slideImage="2"></ng-image-slider>
         </div>
 
         <!-- section 2 -->
@@ -20,7 +20,7 @@
                             <i>{{product.info}}</i>
                             <div class="d-flex price-buy">
                                 <b>50/-</b>
-                                <button class="btn btn-outline-success btn-sm"
+                                <button class="btn buy-btn btn-outline-success btn-sm"
                                     (click)="goToProduct(product.id)">Buy</button>
                             </div>
                         </div>
